# tic-tac-toe

./: .coverage  .gitignore  README.md  pyproject.toml  run_game.py  test_menu.py  test_scenes.py  tictactoe.db  window.json
src/tictactoe/: ai.py  app.py  board.py  layout.py  logger.py  menu.py  scene.py  storage.py  ui.py
src/tictactoe/app/: app.py  scene.py  scene_manager.py
src/tictactoe/consts/: ai_consts.py  board_consts.py  scene_consts.py  theme_consts.py
src/tictactoe/domain/: ai.py  board.py  models.py
src/tictactoe/domain/services/: history_service.py  leaderboard_service.py
src/tictactoe/infra/: logger.py  storage.py
src/tictactoe/screens/: game_scene.py  history.py  history_scene.py  leaderboard.py  leaderboard_scene.py  main_menu_scene.py  reset_scene.py  window.json  window_manager.py
src/tictactoe/ui/: layout.py  theme.py  widgets.py
tests/: test_ai.py  test_board.py  test_storage.py
